--- a/src/main/webapp/public/css/main.css
+++ b/src/main/webapp/public/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background:url(../img/brown60.jpg);
+  background:url(../img/outer_background.png);
   font-family: Verdana, sans-serif;
   font-size: 12px;
 }
@@ -10,6 +10,7 @@ body {
   background: url(../img/f3lhi69.png);
   margin: 0 auto;
   padding: 16px;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;
 }
 
 h1 {
@@ -29,13 +30,8 @@ pre {
 }
 .panell{
   border-radius: 8px;
-  background-image: -webkit-gradient(linear, center top, center bottom, from(rgba(191,191,191,0.85)), to(rgba(252,252,252,0.85)), color-stop(10%, rgba(217,217,217,0.85)), color-stop(88%, rgba(242,242,242,0.85)), color-stop(97%, rgba(247,247,247,0.85)));
-  background-image: -webkit-linear-gradient(top, rgba(191,191,191,0.85), rgba(217,217,217,0.85) 10%, rgba(242,242,242,0.85) 88%, rgba(247,247,247,0.85) 97%, rgba(252,252,252,0.85));
-  background-image: -moz-linear-gradient(top, rgba(191,191,191,0.85), rgba(217,217,217,0.85) 10%, rgba(242,242,242,0.85) 88%, rgba(247,247,247,0.85) 97%, rgba(252,252,252,0.85));
-  background-image: -o-linear-gradient(top, rgba(191,191,191,0.85), rgba(217,217,217,0.85) 10%, rgba(242,242,242,0.85) 88%, rgba(247,247,247,0.85) 97%, rgba(252,252,252,0.85));
-  background-image: -ms-linear-gradient(top, rgba(191,191,191,0.85), rgba(217,217,217,0.85) 10%, rgba(242,242,242,0.85) 88%, rgba(247,247,247,0.85) 97%, rgba(252,252,252,0.85));
-  background-image: linear-gradient(to bottom, rgba(191,191,191,0.85), rgba(217,217,217,0.85) 10%, rgba(242,242,242,0.85) 88%, rgba(247,247,247,0.85) 97%, rgba(252,252,252,0.85));
   -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;
   -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;
   box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;
 }
+.bo{box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;}
