--- a/src/main/webapp/public/css/main.css
+++ b/src/main/webapp/public/css/main.css
@@ -34,4 +34,4 @@ pre {
   -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;
   box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;
 }
-.bo{box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;}
+.bo{box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;border-radius: 6px;}
